--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
-    "next": "15.3.1",
+    "next": "^15.3.2",
     "next-themes": "^0.4.6",
     "prisma": "^6.7.0",
     "react": "^19.1.0",
@@ -65,7 +65,7 @@
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "eslint": "^9.26.0",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "^15.3.2",
     "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3"
