--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
+    "motion": "^12.16.0",
     "next": "^15.3.3",
     "next-themes": "^0.4.6",
     "prisma": "^6.9.0",
